Client-requested window menu mispositioned
Display: Wayland, 3840x2160, 200%, "scale-monitor-framebuffer"
enabled
The window menu requested by the client (e.g. by a right-click on the headerbar of gtk3-demo
) is mispositioned, being too low and far to the right.
It seems that the offset from the local surface origin to the anchor point is double (200%) of what it should be.
mutter 3.32.0-25-gf0b9654d
gnome-shell 3.32.0-20-g05e55cee2
gtk3 3.24.7-25-g17665f06e3