wayland/xdg-shell: Correct window menu position in logical layout mode

Fixes https://gitlab.gnome.org/GNOME/mutter/issues/527